# listener

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  IDEAS.md  README.md  flake.nix  skills.md
src/: artifact_privacy.rs  capture.rs  client.rs  command.rs  compact_audio.rs  configuration.rs  daemon.rs  delivery.rs  error.rs  history.rs  latency.rs  lib.rs  main.rs  maintenance.rs  meta.rs  notification.rs  recall.rs  recording_log.rs  runtime.rs  status.rs  transcription.rs  transport.rs
tests/: capture.rs  command.rs  configuration.rs  history.rs  recall.rs  recording_log.rs  runtime.rs  transcription.rs
tests/fixtures/: removed_transcription_terms.txt  transcription_customization_terms.txt
